sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:3: error: illegal start of simple pattern
for (int i = 1; i < getValueCount(); i++) {
           ^AlgInsertionSort:3: error: '<-' expected but ';' found.
for (int i = 1; i < getValueCount(); i++) {
              ^AlgInsertionSort:3: error: '<-' expected but ';' found.
for (int i = 1; i < getValueCount(); i++) {
                                   ^AlgInsertionSort:3: error: illegal start of simple pattern
for (int i = 1; i < getValueCount(); i++) {
                                        ^AlgInsertionSort:12: error: illegal start of simple expression
}
^